Improve performance on mobile.